# C-Template-Metaprogramming

./: README.md
chap2/: exercise2-0.hpp
chap2/tests/: CMakeLists.txt  exercise2-0.cpp  main.cpp
